Adjusted mobile layout and squashed bugs in playback interface

--- a/css/input-range.css
+++ b/css/input-range.css
@@ -4,7 +4,8 @@
 	--input-primary: #fff;
 
 	--thumb-size: 1rem;
-	--track-size: 1rem;
+	--track-size: 0.5rem;
+	--track-bg-color: transparent;
 }
 
 /* Base thumb styles */
@@ -59,7 +60,7 @@
 	height: var(--track-size);
 	color: transparent;
 	cursor: pointer;
-	background-color: transparent;
+	background-color: var(--track-bg-color);
 	border: none;
 	border-radius: 1rem;
 }
@@ -69,7 +70,7 @@
 	height: var(--track-size);
 	color: transparent;
 	cursor: pointer;
-	background-color: transparent;
+	background-color: var(--track-bg-color);
 	border: none;
 	border-radius: 1rem;
 }
